--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-xs-12 col-sm-offset-3 col-sm-6 title">
       <h1>Will's Tea Repertoire</h1>
-      <p>Your home of all thing tea!</p>
+      <p>Making Tea Fairer!</p>
     </div>
   </div>
 </div>
