trying out making a static page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,13 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-offset-3 col-sm-6 title">
-      <h1>Will's Tea Repertoire</h1>
+      <h1> Will's Tea Repertoire </h1>
       <p>Making Tea Fairer!</p>
-      <p> <%= link_to "view groups", tea_groups_path %> </p>
+      <p> <%= link_to "view groups", tea_groups_path, class: "btn btn-primary" %> </p>
+      <p> <%= link_to "test page", test_page_path %> </p>
     </div>
   </div>
 </div>
+
+<h1> Timi's feet smell </h1>
+<h1> <i class="fa fa-coffee" aria-hidden="true"></i> </h1>
